Fix display on mobile

--- a/assets/autoload.scss
+++ b/assets/autoload.scss
@@ -10,5 +10,5 @@ $global-colors: map-add($global-colors, "branding-primary", $color-branding-prim
 $global-colors: map-add($global-colors, "branding-primary-muted", $color-branding-primary-muted);
 $global-colors: map-add($global-colors, "branding-primary-accent", $color-branding-primary-accent);
 
-$small-breakpoint: 520px;
+$small-breakpoint: 570px;
 $medium-breakpoint: 800px;
